[gd_scene load_steps=2 format=2]

[ext_resource path="res://views/main_view/main_view.gd" type="Script" id=1]

[node name="MainView" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="GlobalActions" type="HBoxContainer" parent="."]
margin_right = 1600.0
margin_bottom = 20.0

[node name="StartAll" type="Button" parent="GlobalActions"]
margin_right = 94.0
margin_bottom = 20.0
text = "Start all apps"

[node name="StopAll" type="Button" parent="GlobalActions"]
margin_left = 98.0
margin_right = 191.0
margin_bottom = 20.0
text = "Stop all apps"

[node name="RefreshStatus" type="Button" parent="GlobalActions"]
margin_left = 195.0
margin_right = 298.0
margin_bottom = 20.0
text = "Refresh status"

[node name="HSeparator" type="HSeparator" parent="."]
margin_top = 24.0
margin_right = 1600.0
margin_bottom = 28.0

[node name="ScrollContainer" type="ScrollContainer" parent="."]
margin_top = 32.0
margin_right = 1600.0
margin_bottom = 900.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
margin_right = 1600.0
margin_bottom = 868.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="RegisteredAppsLabel" type="Label" parent="ScrollContainer/VBoxContainer"]
margin_right = 1600.0
margin_bottom = 14.0
text = "Registered apps"
align = 1

[node name="HSeparator" type="HSeparator" parent="ScrollContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 1600.0
margin_bottom = 22.0

[node name="Actions" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
margin_top = 26.0
margin_right = 1600.0
margin_bottom = 46.0

[node name="SelectAll" type="Button" parent="ScrollContainer/VBoxContainer/Actions"]
margin_right = 70.0
margin_bottom = 20.0
text = "Select all"

[node name="DeselectAll" type="Button" parent="ScrollContainer/VBoxContainer/Actions"]
margin_left = 74.0
margin_right = 162.0
margin_bottom = 20.0
text = "Deselect all"

[node name="StartSelected" type="Button" parent="ScrollContainer/VBoxContainer/Actions"]
margin_left = 166.0
margin_right = 266.0
margin_bottom = 20.0
disabled = true
text = "Start selected"

[node name="StopSelected" type="Button" parent="ScrollContainer/VBoxContainer/Actions"]
margin_left = 270.0
margin_right = 369.0
margin_bottom = 20.0
disabled = true
text = "Stop selected"

[node name="RegisterNew" type="Button" parent="ScrollContainer/VBoxContainer/Actions"]
margin_left = 1479.0
margin_right = 1600.0
margin_bottom = 20.0
size_flags_horizontal = 10
text = "Register new app"

[node name="RegisteredApps" type="VBoxContainer" parent="ScrollContainer/VBoxContainer"]
margin_top = 50.0
margin_right = 1600.0
margin_bottom = 50.0
